# codaxlinear

./: pyproject.toml
coda2linear/: __init__.py  cli.py  coda_client.py  linear_client.py  state.py  transform.py
docs/superpowers/plans/: 2026-05-15-coda2linear-implementation.md
docs/superpowers/specs/: 2026-05-07-coda-to-linear-migration-design.md
tests/: __init__.py  test_coda_client.py  test_linear_client.py  test_state.py  test_transform.py
